[Add] Compatibility를 위해 cart.css 파일에 'appearance' standard property를 추가

--- a/src/pages/cart/cart.css
+++ b/src/pages/cart/cart.css
@@ -196,6 +196,7 @@ main {
 }
 .input_number input[type='number'] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .input_number button {
@@ -613,6 +614,7 @@ main {
 }
 .input_number input[type='number'] {
   -moz-appearance: textfield;
+  appearance: textfield;
 }
 
 .input_number button {
