[Modify] 프로젝트 소스 코드 내 '마켓컬리' -> '마켓칼리', '컬리' -> '칼리'로 이름 변경

--- a/src/components/header/index.html
+++ b/src/components/header/index.html
@@ -51,7 +51,7 @@
             <div class="logo_switch">
               <h1 class="logo">
                 <a href="%BASE_URL%">
-                  <img src="/public/logo.png" alt="마켓컬리 홈으로" />
+                  <img src="/public/logo.png" alt="마켓칼리 홈으로" />
                 </a>
               </h1>
               <div class="switch">
